--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-qrcode": "^0.2.7",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
+    "react-native-webview": "^8.1.0",
     "react-navigation": "^4.1.1",
     "styled-components": "^5.0.1"
   },
