add homepage, fix publish script

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "web-build": "expo build:web",
-    "web-publish": "gh-pages -d '/demo' -r https://github.com/Devs-IO/megahack-app",
+    "web-publish": "gh-pages -d '/web-build' -e '/demo' -r https://github.com/Devs-IO/megahack-app",
     "eject": "expo eject"
   },
   "dependencies": {
@@ -29,5 +29,6 @@
     "babel-preset-expo": "~8.0.0",
     "gh-pages": "^2.2.0"
   },
-  "private": true
+  "private": true,
+  "homepage": "https://vocemepa.ga/demo"
 }
