--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "web-build": "expo build:web",
-    "web-publish": "gh-pages -d '/web-build' -e '/demo' -r https://github.com/Devs-IO/megahack-app",
+    "web-publish": "gh-pages -d './web-build' -e './demo' -r https://github.com/Devs-IO/megahack-app",
     "eject": "expo eject"
   },
   "dependencies": {
